Disabling test_access_control for systems that don't have advanced setup

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 
-addopts = --cov-report xml --tb=short --cov . --cov-report term-missing --verbose --cov-config coveragerc --junitxml=junit.xml -m "not long_running"
+addopts = --cov-report xml --tb=short --cov . --cov-report term-missing --verbose --cov-config coveragerc --junitxml=junit.xml -m "not long_running and not needs_advanced_setup"
 
 DJANGO_SETTINGS_MODULE = valentina.settings
 
