--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -7,10 +7,10 @@ dependencies:
   - asn1crypto=0.24.0=py36_1003
   - atomicwrites=1.3.0=py_0
   - attrs=19.1.0=py_0
-  - bzip2=1.0.8=h516909a_0
-  - ca-certificates=2019.6.16=hecc5488_0
+  - bzip2=1.0.8=h516909a_1
+  - ca-certificates=2019.9.11=hecc5488_0
   - cartopy=0.17.0=py36h4331854_1006
-  - certifi=2019.6.16=py36_1
+  - certifi=2019.9.11=py36_0
   - cffi=1.12.3=py36h8022711_0
   - chardet=3.0.4=py36_1003
   - configobj=5.0.6=py_0
@@ -19,12 +19,12 @@ dependencies:
   - cycler=0.10.0=py_1
   - cython=0.29.13=py36he1b5a44_0
   - dbus=1.13.6=he372182_0
-  - django=2.2.4=py36_0
+  - django=2.2.5=py36_0
   - eccodes=2.13.1=hec26673_1
   - expat=2.2.5=he1b5a44_1003
   - fontconfig=2.13.1=h86ecdb6_1001
   - freetype=2.10.0=he983fc9_1
-  - geos=3.7.2=he1b5a44_1
+  - geos=3.7.2=he1b5a44_2
   - gettext=0.19.8.1=hc5be6a0_1002
   - glib=2.58.3=h6f030ca_1002
   - gst-plugins-base=1.14.5=h0935bb2_0
@@ -33,7 +33,7 @@ dependencies:
   - hdf5=1.10.5=nompi_h3c11f04_1103
   - icu=64.2=he1b5a44_1
   - idna=2.8=py36_1000
-  - importlib_metadata=0.18=py36_0
+  - importlib_metadata=0.22=py36_0
   - jasper=1.900.1=h07fcdf6_1006
   - jpeg=9c=h14c3975_1001
   - kiwisolver=1.1.0=py36hc9558a2_0
@@ -48,7 +48,7 @@ dependencies:
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libiconv=1.15=h516909a_1005
   - liblapack=3.8.0=12_openblas
-  - libnetcdf=4.6.2=h056eaf5_1002
+  - libnetcdf=4.6.2=h303dfb8_1003
   - libopenblas=0.3.7=h6e990d7_1
   - libpng=1.6.37=hed695b0_0
   - libssh2=1.8.2=h22169c7_2
@@ -62,7 +62,7 @@ dependencies:
   - matplotlib-base=3.1.1=py36he7580a8_1
   - more-itertools=7.2.0=py_0
   - ncurses=6.1=hf484d3e_1002
-  - numpy=1.17.1=py36h95a1406_0
+  - numpy=1.17.2=py36h95a1406_0
   - olefile=0.46=py_0
   - openssl=1.1.1c=h516909a_0
   - owslib=0.18.0=py_0
@@ -81,12 +81,12 @@ dependencies:
   - pykdtree=1.3.1=py36h3010b51_1002
   - pyopenssl=19.0.0=py36_0
   - pyparsing=2.4.2=py_0
-  - pyproj=2.3.0=py36h2fd02e8_0
-  - pyqt=5.9.2=py36hcca6a23_2
-  - pyresample=1.12.3=py36hf2d7682_0
+  - pyproj=2.3.1=py36h2fd02e8_0
+  - pyqt=5.9.2=py36hcca6a23_4
+  - pyresample=1.13.0=py36hb3f55d8_0
   - pyshp=2.1.0=py_0
   - pysocks=1.7.0=py36_0
-  - pytest=5.1.1=py36_0
+  - pytest=5.1.2=py36_0
   - python=3.6.7=h357f687_1005
   - python-dateutil=2.8.0=py_0
   - pytz=2019.2=py_0
@@ -98,9 +98,9 @@ dependencies:
   - setuptools=41.2.0=py36_0
   - sip=4.19.8=py36hf484d3e_1000
   - six=1.12.0=py36_1000
-  - sqlite=3.29.0=hcee41ef_0
+  - sqlite=3.29.0=hcee41ef_1
   - sqlparse=0.3.0=py_0
-  - tk=8.6.9=hed695b0_1002
+  - tk=8.6.9=hed695b0_1003
   - tornado=6.0.3=py36h516909a_0
   - urllib3=1.25.3=py36_0
   - wcwidth=0.1.7=py_1
@@ -110,7 +110,7 @@ dependencies:
   - xz=5.2.4=h14c3975_1001
   - yaml=0.1.7=h14c3975_1001
   - zipp=0.6.0=py_0
-  - zlib=1.2.11=h516909a_1005
+  - zlib=1.2.11=h516909a_1006
   - zstd=1.4.0=h3b9ef0a_0
   - pip:
     - amqp==2.5.1
@@ -120,28 +120,28 @@ dependencies:
     - cdsapi==0.2.3
     - celery==4.1.1
     - cftime==1.0.3.4
-    - configparser==3.8.1
+    - configparser==4.0.2
     - coverage==4.5.4
     - datedown==0.3
-    - django-countries==5.4
+    - django-countries==5.5
     - django-widget-tweaks==1.4.5
     - ease-grid==0.1
     - ecmwf-api-client==1.5.4
     - ecmwf-models==0.5
     - esa-cci-sm==0.1.1
     - gldas==0.5
-    - h5py==2.9.0
+    - h5py==2.10.0
     - ismn==0.3.1
     - kombu==4.6.4
     - lxml==4.4.1
-    - netcdf4==1.5.1.2
+    - netcdf4==1.5.2
     - nose==1.3.7
     - parse==1.12.1
     - psycopg2-binary==2.8.3
     - pygeobase==0.3.18
-    - pygeogrids==0.2.5
+    - pygeogrids==0.2.6
     - pynetcf==0.1.18
-    - pytesmo==0.7.0
+    - pytesmo==0.7.1
     - pytest-cov==2.7.1
     - pytest-django==3.5.1
     - pytest-mpl==0.10
@@ -150,7 +150,7 @@ dependencies:
     - seaborn==0.9.0
     - shapely==1.6.4.post2
     - smap-io==0.3
-    - smecv-grid==0.1
+    - smecv-grid==0.2
     - smos==0.1
     - tqdm==4.35.0
     - trollsift==0.2.1
