--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -160,4 +160,4 @@ dependencies:
     - trollsift==0.2.1
     - vine==1.3.0
     - xarray==0.14.1
-    - qa4sm_reader==0.2.2
+    - git+https://github.com/TUW-GEO/qa4sm-reader.git
