--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -64,6 +64,7 @@ dependencies:
   - matplotlib=3.1.2
   - matplotlib-base=3.1.2
   - more-itertools=7.2.0
+  - numpy=1.17.4
   - ncurses=6.1
   - nspr=4.23
   - nss=3.47
@@ -139,7 +140,6 @@ dependencies:
     - lxml==4.4.2
     - netcdf4==1.5.3
     - nose==1.3.7
-    - numpy==1.17.4
     - parse==1.12.1
     - psycopg2-binary==2.8.4
     - pygeobase==0.3.18
