Revert "Exclude graphics test until segfault is solved"
This reverts commit 91bd5e88e0d52cf1a2654581363c79538b58cc97.

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
   - which python
 
 script:
-  - pytest -m "not needs_advanced_setup and not graphs"
+  - pytest -m "not needs_advanced_setup"
 after_success:
   # report coverage results to coveralls.io
   #- pip install coveralls
