--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,9 @@ install:
   - which python
 
 script:
-  - pytest -m "not needs_advanced_setup"
+  - pytest -m "not needs_advanced_setup and not long_running and not graphs"
+  - pytest -m "not needs_advanced_setup and long_running and not graphs"
+  - pytest -m "graphs"
 after_success:
   # report coverage results to coveralls.io
   #- pip install coveralls
