--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
   - attrs=19.3.0
   - bzip2=1.0.8
   - ca-certificates=2019.11.28
@@ -45,6 +46,7 @@ dependencies:
   - libffi=3.2.1
   - libgcc-ng=9.2.0
   - libgfortran-ng=7.3.0
+  - libgomp=9.2.0
   - libiconv=1.15
   - liblapack=3.8.0
   - libllvm9=9.0.0
@@ -62,6 +64,7 @@ dependencies:
   - matplotlib=3.1.2
   - matplotlib-base=3.1.2
   - more-itertools=7.2.0
+  - numpy=1.17.4
   - ncurses=6.1
   - nspr=4.23
   - nss=3.47
@@ -137,7 +140,6 @@ dependencies:
     - lxml==4.4.2
     - netcdf4==1.5.3
     - nose==1.3.7
-    - numpy==1.17.4
     - parse==1.12.1
     - psycopg2-binary==2.8.4
     - pygeobase==0.3.18
@@ -152,7 +154,7 @@ dependencies:
     - redis==3.3.11
     - repurpose==0.7.1
     - seaborn==0.9.0
-    - shapely==1.6.4.post2
+    - shapely==1.7.0
     - smap-io==0.3
     - smecv-grid==0.2
     - smos==0.1
