Removing obsolete imports and simplifying code, also defining pytest markers

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,8 @@ addopts = --cov-report xml --tb=short --cov . --cov-report term-missing --verbos
 DJANGO_SETTINGS_MODULE = valentina.settings
 
 python_files = tests.py test_*.py *_tests.py
+
+markers =
+    needs_advanced_setup: these tests need an environment with celery, redis, rabbitmq, or postgres
+    long_running: tests that run for a long time (i.e. more than a few seconds)
+    graphs: tests concerning the graph production in qa4sm
