--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pytesmo>=0.9
 sqlparse
 numpy
 scipy
@@ -27,6 +28,6 @@ ascat>=1.0
 cartopy
 ismn>=0.3
 esa_cci_sm>=0.1.1
-smos>=0.1
+smos>=0.2
 ecmwf-models>=0.5
 seaborn
