--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -5,160 +5,201 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - asgiref=3.2.10
   - attrs=19.3.0
+  - boost-cpp=1.72.0
+  - brotlipy=0.7.0
   - bzip2=1.0.8
-  - ca-certificates=2019.11.28
-  - cartopy=0.17.0
-  - certifi=2019.11.28
-  - cffi=1.13.2
+  - ca-certificates=2020.6.20
+  - cairo=1.16.0
+  - cartopy=0.18.0
+  - certifi=2020.6.20
+  - cffi=1.14.0
+  - cfitsio=3.470
   - chardet=3.0.4
   - configobj=5.0.6
-  - cryptography=2.8
-  - curl=7.65.3
+  - cryptography=2.9.2
+  - curl=7.71.1
   - cycler=0.10.0
-  - cython=0.29.14
+  - cython=0.29.20
   - dbus=1.13.6
-  - django=2.2.8
-  - eccodes=2.14.1
-  - expat=2.2.5
+  - django=3.0.8
+  - eccodes=2.18.0
+  - expat=2.2.9
   - fontconfig=2.13.1
-  - freetype=2.10.0
-  - geos=3.8.0
+  - freetype=2.10.2
+  - freexl=1.0.5
+  - gdal=3.1.1
+  - geos=3.8.1
+  - geotiff=1.6.0
   - gettext=0.19.8.1
-  - glib=2.58.3
+  - giflib=5.2.1
+  - glib=2.65.0
   - gst-plugins-base=1.14.5
   - gstreamer=1.14.5
   - hdf4=4.2.13
-  - hdf5=1.10.5
+  - hdf5=1.10.6
   - icu=64.2
-  - idna=2.8
-  - importlib_metadata=1.1.0
+  - idna=2.10
+  - importlib-metadata=1.7.0
+  - importlib_metadata=1.7.0
   - jasper=1.900.1
-  - jpeg=9c
-  - kiwisolver=1.1.0
-  - krb5=1.16.3
+  - jpeg=9d
+  - json-c=0.13.1
+  - kealib=1.4.13
+  - kiwisolver=1.2.0
+  - krb5=1.17.1
+  - ld_impl_linux-64=2.34
   - libaec=1.0.4
   - libblas=3.8.0
   - libcblas=3.8.0
-  - libclang=9.0.0
-  - libcurl=7.65.3
-  - libedit=3.1.20170329
+  - libclang=9.0.1
+  - libcurl=7.71.1
+  - libdap4=3.20.6
+  - libedit=3.1.20191231
   - libffi=3.2.1
   - libgcc-ng=9.2.0
-  - libgfortran-ng=7.3.0
-  - libgomp=9.2.0
+  - libgdal=3.1.1
+  - libgfortran-ng=7.5.0
   - libiconv=1.15
+  - libkml=1.3.0
   - liblapack=3.8.0
-  - libllvm9=9.0.0
-  - libnetcdf=4.7.1
-  - libopenblas=0.3.7
+  - libllvm9=9.0.1
+  - libnetcdf=4.7.4
+  - libopenblas=0.3.10
   - libpng=1.6.37
-  - libssh2=1.8.2
+  - libpq=12.2
+  - libspatialite=4.3.0a
+  - libssh2=1.9.0
   - libstdcxx-ng=9.2.0
   - libtiff=4.1.0
   - libuuid=2.32.1
+  - libwebp-base=1.1.0
   - libxcb=1.13
-  - libxkbcommon=0.9.1
+  - libxkbcommon=0.10.0
   - libxml2=2.9.10
-  - lz4-c=1.8.3
-  - matplotlib=3.1.2
-  - matplotlib-base=3.1.2
-  - more-itertools=7.2.0
-  - numpy=1.17.4
+  - llvm-openmp=10.0.0
+  - lz4-c=1.9.2
+  - matplotlib=3.2.2
+  - matplotlib-base=3.2.2
+  - more-itertools=8.4.0
   - ncurses=6.1
-  - nspr=4.23
+  - nspr=4.26
   - nss=3.47
   - olefile=0.46
-  - openssl=1.1.1d
-  - owslib=0.19.0
-  - packaging=19.2
-  - pandas=0.25.3
-  - pcre=8.43
-  - pillow=6.2.1
-  - pip=19.3.1
-  - pluggy=0.12.0
-  - proj=6.2.1
+  - openjpeg=2.3.1
+  - openssl=1.1.1g
+  - owslib=0.20.0
+  - packaging=20.4
+  - pandas=1.0.5
+  - pcre=8.44
+  - pillow=7.2.0
+  - pip=20.1.1
+  - pixman=0.38.0
+  - pluggy=0.13.1
+  - poppler=0.89.0
+  - poppler-data=0.4.9
+  - postgresql=12.2
+  - proj=7.0.0
   - pthread-stubs=0.4
-  - py=1.8.0
-  - pycparser=2.19
+  - py=1.9.0
+  - pycparser=2.20
   - pyepsg=0.4.0
   - pygrib=2.0.4
   - pykdtree=1.3.1
   - pyopenssl=19.1.0
-  - pyparsing=2.4.5
-  - pyproj=2.4.2.post1
+  - pyparsing=2.4.7
+  - pyproj=2.6.1.post1
   - pyqt=5.12.3
-  - pyresample=1.13.2
+  - pyresample=1.16.0
   - pyshp=2.1.0
   - pysocks=1.7.1
-  - pytest=5.3.1
-  - python=3.6.7
+  - pytest=5.4.3
+  - python=3.6.10
   - python-dateutil=2.8.1
-  - pytz=2019.3
-  - pyyaml=5.1.2
+  - python_abi=3.6
+  - pytz=2020.1
+  - pyyaml=5.3.1
   - qt=5.12.5
   - readline=8.0
-  - requests=2.22.0
-  - scipy=1.3.2
-  - setuptools=42.0.2
-  - six=1.13.0
-  - sqlite=3.30.1
-  - sqlparse=0.3.0
+  - requests=2.24.0
+  - scipy=1.5.0
+  - setuptools=49.1.0
+  - six=1.15.0
+  - sqlite=3.32.3
+  - sqlparse=0.3.1
+  - tbb=2020.1
+  - tiledb=2.0.5
   - tk=8.6.10
-  - tornado=6.0.3
-  - urllib3=1.25.7
-  - wcwidth=0.1.7
-  - wheel=0.33.6
+  - tornado=6.0.4
+  - tzcode=2020a
+  - urllib3=1.25.9
+  - wcwidth=0.2.5
+  - wheel=0.34.2
+  - xerces-c=3.2.2
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.6.9
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
-  - xz=5.2.4
-  - yaml=0.2.2
-  - zipp=0.6.0
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xz=5.2.5
+  - yaml=0.2.5
+  - zipp=3.1.0
   - zlib=1.2.11
   - zstd=1.4.4
   - pip:
-    - amqp==2.5.2
-    - ascat==1.0
+    - amqp==2.6.0
+    - ascat==1.1.1
     - billiard==3.5.0.5
-    - c3s-sm==0.1.1
-    - cdsapi==0.2.5
+    - c3s-sm==0.1.2
+    - cadati==0.0.2
+    - cdsapi==0.3.0
     - celery==4.1.1
-    - cftime==1.0.4.2
-    - configparser==4.0.2
-    - coverage==4.5.4
+    - cftime==1.2.0
+    - configparser==5.0.0
+    - coverage==5.1
     - datedown==0.3
-    - django-countries==5.5
-    - django-widget-tweaks==1.4.5
+    - django-countries==6.1.2
+    - django-widget-tweaks==1.4.8
     - ease-grid==0.1
     - ecmwf-api-client==1.5.4
-    - ecmwf-models==0.6
+    - ecmwf-models==0.7
     - esa-cci-sm==0.1.1
-    - gldas==0.5
+    - gldas==0.6.1
     - h5py==2.10.0
     - ismn==0.3.2
-    - kombu==4.6.6
-    - lxml==4.4.2
+    - kombu==4.6.11
+    - llvmlite==0.33.0
     - netcdf4==1.5.3
     - nose==1.3.7
-    - parse==1.12.1
-    - psycopg2-binary==2.8.4
-    - pygeobase==0.3.18
-    - pygeogrids==0.2.6
-    - pynetcf==0.1.18
+    - numba==0.50.1
+    - numpy==1.19.0
+    - parse==1.15.0
+    - psycopg2-binary==2.8.5
+    - pygeobase==0.4.0
+    - pygeogrids==0.3.0
+    - pynetcf==0.2.2
     - pyqt5-sip==4.19.18
+    - pyqtchart==5.12
     - pyqtwebengine==5.12.1
     - pytesmo==0.9
-    - pytest-cov==2.8.1
-    - pytest-django==3.7.0
+    - pytest-cov==2.10.0
+    - pytest-django==3.9.0
     - pytest-mpl==0.11
-    - redis==3.3.11
+    - redis==3.5.3
     - repurpose==0.7.1
-    - seaborn==0.9.0
+    - seaborn==0.10.1
     - shapely==1.7.0
-    - smap-io==0.3
-    - smecv-grid==0.2
+    - smap-io==0.4
+    - smecv-grid==0.2.1
     - smos==0.2
-    - tqdm==4.40.0
+    - tqdm==4.47.0
     - trollsift==0.2.1
     - vine==1.3.0
-    - xarray==0.14.1
+    - xarray==0.15.1
