--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -1,3 +1,6 @@
+
+# TODO: re-recreate env before next release!!!!
+
 name: null
 channels:
   - conda-forge
@@ -188,7 +191,7 @@ dependencies:
     - pyqt5-sip==4.19.18
     - pyqtchart==5.12
     - pyqtwebengine==5.12.1
-    - pytesmo==0.9
+    - git+https://github.com/wpreimes/pytesmo@master
     - pytest-cov==2.10.0
     - pytest-django==3.9.0
     - pytest-mpl==0.11
