--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ install:
 
   - python manage.py migrate
 
-  - python manage.py loaddata versions variables filters datasets
+  - python manage.py loaddata versions variables filters datasets networks
 
   - pip list
   - which pip
