--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -1,4 +1,4 @@
-name: /var/lib/qa4sm-conda
+name: null
 channels:
   - conda-forge
   - defaults
@@ -7,8 +7,6 @@ dependencies:
   - _openmp_mutex=4.5
   - asgiref=3.2.10
   - attrs=20.3.0
-  - backports=1.0
-  - backports.functools_lru_cache
   - brotlipy=0.7.0
   - bzip2=1.0.8
   - c-ares=1.16.1
@@ -37,8 +35,9 @@ dependencies:
   - hdf5=1.10.6
   - icu=64.2
   - idna=2.10
-  - importlib-metadata=2.0.0
-  - importlib_metadata=2.0.0
+  - importlib-metadata
+  - importlib_metadata
+  - iniconfig=1.1.1
   - jasper=1.900.1
   - jpeg=9d
   - kiwisolver=1.3.1
@@ -77,7 +76,7 @@ dependencies:
   - ncurses=6.2
   - numpy=1.19.4
   - olefile=0.46
-  - openssl=1.1.1
+  - openssl=1.1.1h
   - owslib=0.20.0
   - packaging=20.4
   - pandas=1.1.4
@@ -99,7 +98,7 @@ dependencies:
   - pyresample=1.17.0
   - pyshp=2.1.2
   - pysocks=1.7.1
-  - pytest=5.4.3
+  - pytest=6.1.2
   - python=3.6.11
   - python-dateutil=2.8.1
   - python_abi=3.6
@@ -115,9 +114,9 @@ dependencies:
   - sqlite=3.33.0
   - sqlparse=0.4.1
   - tk=8.6.10
+  - toml=0.10.2
   - tornado=6.1
   - urllib3=1.25.11
-  - wcwidth=0.2.5
   - wheel=0.35.1
   - xarray=0.16.1
   - xorg-libxau=1.0.9
@@ -166,7 +165,7 @@ dependencies:
     - pytest-cov==2.10.1
     - pytest-django==4.1.0
     - pytest-mpl==0.12
-    - qa4sm-reader==0.3.2
+    - qa4sm-reader==0.3.3
     - redis==3.5.3
     - repurpose==0.8
     - seaborn==0.11.0
@@ -174,6 +173,7 @@ dependencies:
     - smap-io==0.4
     - smecv-grid==0.3
     - smos==0.2
-    - tqdm==4.51.0
+    - tqdm==4.52.0
     - trollsift==0.2.1
     - vine==1.3.0
+
