--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -7,6 +7,8 @@ dependencies:
   - _openmp_mutex=4.5
   - asgiref=3.2.10
   - attrs=20.3.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.1
   - brotlipy=0.7.0
   - bzip2=1.0.8
   - c-ares=1.16.1
@@ -35,9 +37,8 @@ dependencies:
   - hdf5=1.10.6
   - icu=64.2
   - idna=2.10
-  - importlib-metadata
-  - importlib_metadata
-  - iniconfig=1.1.1
+  - importlib-metadata=2.0.0
+  - importlib_metadata=2.0.0
   - jasper=1.900.1
   - jpeg=9d
   - kiwisolver=1.3.1
@@ -98,7 +99,7 @@ dependencies:
   - pyresample=1.17.0
   - pyshp=2.1.2
   - pysocks=1.7.1
-  - pytest=6.1.2
+  - pytest=5.4.3
   - python=3.6.11
   - python-dateutil=2.8.1
   - python_abi=3.6
@@ -114,9 +115,9 @@ dependencies:
   - sqlite=3.33.0
   - sqlparse=0.4.1
   - tk=8.6.10
-  - toml=0.10.2
   - tornado=6.1
   - urllib3=1.25.11
+  - wcwidth=0.2.5
   - wheel=0.35.1
   - xarray=0.16.1
   - xorg-libxau=1.0.9
@@ -135,7 +136,7 @@ dependencies:
     - cadati==0.0.2
     - cdsapi==0.3.1
     - celery==4.1.1
-    - cftime==1.2.1
+    - cftime==1.3.0
     - colorcet==2.0.2
     - configparser==5.0.1
     - coverage==5.3
@@ -176,4 +177,3 @@ dependencies:
     - tqdm==4.52.0
     - trollsift==0.2.1
     - vine==1.3.0
-
