--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 pytesmo>=0.9
 sqlparse
-numpy
+numpy~=1.19.4
 scipy
-pandas
-netCDF4
+pandas~=1.1.4
+netCDF4~=1.5.4
 cython
-pytest
-matplotlib
+pytest~=5.4.3
+matplotlib~=3.3.3
 pyproj
 django>=2.1
 pyresample
@@ -25,9 +25,16 @@ smap-io>=0.3
 django-countries
 c3s-sm>=0.1.1
 ascat>=1.0
-cartopy
+cartopy~=0.18.0
 ismn>=0.3
 esa_cci_sm>=0.1.1
 smos>=0.2
 ecmwf-models>=0.5
 seaborn
+
+djangorestframework~=3.12.2
+pytz~=2020.4
+python-dateutil~=2.8.1
+requests~=2.25.0
+pygeobase~=0.4.0
+parse~=1.18.0
