--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -179,3 +179,5 @@ dependencies:
     - vine==1.3.0
     - djangorestframework==3.12.2
     - pyjwt==2.0.1
+    - uritemplate==3.0.1
+    - drf-yasg==1.20.0
