--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -166,7 +166,7 @@ dependencies:
     - pytest-cov==2.10.1
     - pytest-django==4.1.0
     - pytest-mpl==0.12
-    - qa4sm-reader==0.3.3
+    - git+https://github.com/TUW-GEO/qa4sm-reader.git 
     - redis==3.5.3
     - repurpose==0.8
     - seaborn==0.11.0
