--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -162,7 +162,7 @@ dependencies:
     - pygeobase==0.4.0
     - pygeogrids==0.3.0
     - pynetcf==0.2.2
-    - pytesmo==0.9.1
+    - git+https://github.com/TUW-GEO/pytesmo.git
     - pytest-cov==2.10.1
     - pytest-django==4.1.0
     - pytest-mpl==0.12
