--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -180,3 +180,4 @@ dependencies:
     - djangorestframework==3.12.2
     - uritemplate==3.0.1
     - drf-yasg==1.20.0
+    - django-cors-headers==3.7.0
