--- a/UI/docker/.htaccess
+++ b/UI/docker/.htaccess
@@ -8,5 +8,5 @@
 
     # Rewrite everything else to index.html
     # to allow html5 state links
-    RewriteRule ^ index.html [L]
+    RewriteRule ^ /ui/index.html [L]
 </IfModule>
