--- a/UI/docker/Dockerfile
+++ b/UI/docker/Dockerfile
@@ -1,3 +1,8 @@
-FROM httpd:2.4
+FROM httpd:alpine
+MAINTAINER Jonathan Heilmann<mail@jonathan-heilmann.de>
+
+RUN sed -i '/LoadModule rewrite_module/s/^#//g' /usr/local/apache2/conf/httpd.conf && \
+    sed -i 's#AllowOverride [Nn]one#AllowOverride All#' /usr/local/apache2/conf/httpd.conf
+
 COPY ./ui /usr/local/apache2/htdocs/ui
 COPY ./.htaccess /usr/local/apache2/htdocs/ui/
