Added 2021 ISMN dataset version
This commit includes:
* The ISMN dataset retrieved on 2021/01/31 is added to the code
* Readme file for the new dataset is added
* .gitignore is updated to allow adding the new readme in statics/files

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ valentina/settings_conf.py
 output
 junit.xml
 emails
-/static/
+/static/*
+!/static/files/
 run_celery/
 .coverage*
 */python_metadata/*
