docker file changes

--- a/UI/docker/Dockerfile
+++ b/UI/docker/Dockerfile
@@ -15,13 +15,13 @@ RUN sed -i \
 
 # Append to the published directory, that we want to rewrite any request that is not an actual file
 # to the index.html page.
-RUN sed -i '/<Directory "\/usr\/local\/apache2\/htdocs">/a### Rewrite rule was written from the Dockerfile when building the image ###\n\
+RUN sed -i '/<Directory "\/usr\/local\/apache2\/htdocs\/ui">/a### Rewrite rule was written from the Dockerfile when building the image ###\n\
     DirectoryIndex index.html\n\
     RewriteEngine on\n\
     RewriteCond %{REQUEST_FILENAME} -s [OR]\n\
     RewriteCond %{REQUEST_FILENAME} -d\n\
     RewriteRule ^.*$ - [NC,L]\n\
-    RewriteRule ^(.*) /ui/index.html [NC,L]\n' \
+    RewriteRule ^(.*) index.html [NC,L]\n' \
   /usr/local/apache2/conf/httpd.conf
 
 # Comment out the default config that handles requests to /.htaccess and /.ht* with a special error message,
