docker file changes

--- a/UI/docker/httpd.conf
+++ b/UI/docker/httpd.conf
@@ -549,7 +549,7 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-<Directory /var/www/html/ui>
+<Directory /usr/local/apache2/htdocs/ui>
     Options Indexes FollowSymLinks
     AllowOverride All
     Require all granted
