--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -1,186 +1,226 @@
-<<<<<<< HEAD
-name: null
-=======
-name: qa4sm
->>>>>>> e89aae42db5ea3863e27b0666f5438737b52d7f1
+# need to install yeoda==0.2.0 --no-deps and veranda==0.1.0 --no-deps afterwards
+
+name: qa4sm_hr
 channels:
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - asgiref=3.2.10
+  - asgiref=3.3.1
   - attrs=20.3.0
   - backports=1.0
   - backports.functools_lru_cache=1.6.1
-  - brotlipy=0.7.0
+  - boost-cpp=1.74.0
   - bzip2=1.0.8
-  - c-ares=1.16.1
-  - ca-certificates=2020.11.8
+  - c-ares=1.17.1
+  - ca-certificates=2020.12.5
+  - cairo=1.16.0
   - cartopy=0.18.0
-  - certifi=2020.11.8
-  - cffi=1.14.3
-  - chardet=3.0.4
+  - certifi=2020.12.5
+  - cfitsio=3.470
+  - click=7.1.2
+  - click-plugins=1.1.1
+  - cligj=0.7.1
   - configobj=5.0.6
-  - cryptography=3.2.1
   - curl=7.71.1
   - cycler=0.10.0
   - cython=0.29.21
   - dbus=1.13.6
-  - django=3.1.3
-  - eccodes=2.19.1
-  - expat=2.2.9
+  - django=3.1.6
+  - eccodes=2.20.0
+  - expat=2.2.10
+  - fiona=1.8.18
   - fontconfig=2.13.1
   - freetype=2.10.4
-  - geos=3.8.0
+  - freexl=1.0.5
+  - gdal=3.1.4
+  - geopandas=0.8.2
+  - geos=3.9.0
+  - geotiff=1.6.0
   - gettext=0.19.8.1
-  - glib=2.66.2
+  - giflib=5.2.1
+  - glib=2.66.7
+  - glib-tools=2.66.7
   - gst-plugins-base=1.14.5
-  - gstreamer=1.14.5
+  - gstreamer=1.18.3
   - hdf4=4.2.13
   - hdf5=1.10.6
-  - icu=67.1
-  - idna=2.10
-  - importlib-metadata=2.0.0
-  - importlib_metadata=2.0.0
+  - icu=68.1
+  - importlib-metadata=3.4.0
+  - importlib_metadata=3.4.0
   - jasper=1.900.1
   - jpeg=9d
+  - json-c=0.13.1
+  - kealib=1.4.14
   - kiwisolver=1.3.1
-  - krb5=1.17.1
-  - lcms2=2.11
+  - krb5=1.17.2
+  - lcms2=2.12
   - ld_impl_linux-64=2.35.1
   - libaec=1.0.4
   - libblas=3.9.0
   - libcblas=3.9.0
+  - libclang=11.0.1
   - libcurl=7.71.1
+  - libdap4=3.20.6
   - libedit=3.1.20191231
   - libev=4.33
-  - libffi=3.2.1
+  - libevent=2.1.10
+  - libffi=3.3
   - libgcc-ng=9.3.0
+  - libgdal=3.1.4
   - libgfortran-ng=9.3.0
   - libgfortran5=9.3.0
-  - libglib=2.66.2
+  - libglib=2.66.7
   - libgomp=9.3.0
   - libiconv=1.16
+  - libkml=1.3.0
   - liblapack=3.9.0
+  - libllvm11=11.0.1
   - libnetcdf=4.7.4
-  - libnghttp2=1.41.0
+  - libnghttp2=1.43.0
   - libopenblas=0.3.12
   - libpng=1.6.37
+  - libpq=12.3
+  - librttopo=1.1.0
+  - libspatialindex=1.9.3
+  - libspatialite=5.0.1
   - libssh2=1.9.0
   - libstdcxx-ng=9.3.0
-  - libtiff=4.1.0
+  - libtiff=4.2.0
   - libuuid=2.32.1
-  - libwebp-base=1.1.0
+  - libwebp-base=1.2.0
   - libxcb=1.13
+  - libxkbcommon=1.0.3
   - libxml2=2.9.10
-  - lz4-c=1.9.2
-  - matplotlib=3.3.3
-  - matplotlib-base=3.3.3
-  - more-itertools=8.6.0
+  - lz4-c=1.9.3
+  - matplotlib=3.3.4
+  - matplotlib-base=3.3.4
+  - more-itertools=8.7.0
+  - munch=2.5.0
+  - mysql-common=8.0.22
+  - mysql-libs=8.0.22
   - ncurses=6.2
-  - numpy=1.19.4
+  - nspr=4.29
+  - nss=3.61
+  - numpy=1.19.5
   - olefile=0.46
-  - openssl=1.1.1h
-  - owslib=0.20.0
-  - packaging=20.4
-  - pandas=1.1.4
+  - openjpeg=2.4.0
+  - openssl=1.1.1i
+  - packaging=20.9
+  - pandas=1.1.5
   - pcre=8.44
-  - pillow=8.0.1
-  - pip=20.2.4
+  - pillow=8.1.0
+  - pip=21.0.1
+  - pixman=0.40.0
   - pluggy=0.13.1
-  - proj=6.2.1
+  - poppler=0.89.0
+  - poppler-data=0.4.10
+  - postgresql=12.3
+  - proj=7.2.0
   - pthread-stubs=0.4
-  - py=1.9.0
-  - pycparser=2.20
-  - pyepsg=0.4.0
-  - pygrib=2.0.5
+  - py=1.10.0
+  - pygrib=2.1.3
   - pykdtree=1.3.4
-  - pyopenssl=19.1.0
   - pyparsing=2.4.7
-  - pyproj=2.6.1.post1
-  - pyqt=5.9.2
+  - pyproj=3.0.0.post1
+  - pyqt=5.12.3
+  - pyqt-impl=5.12.3
+  - pyqt5-sip=4.19.18
+  - pyqtchart=5.12
+  - pyqtwebengine=5.12.1
   - pyresample=1.17.0
-  - pyshp=2.1.2
-  - pysocks=1.7.1
+  - pyshp=2.1.3
   - pytest=5.4.3
-  - python=3.6.11
+  - python=3.6.12
   - python-dateutil=2.8.1
   - python_abi=3.6
-  - pytz=2020.4
-  - pyyaml=5.3.1
-  - qt=5.9.7
+  - pytz=2021.1
+  - pyyaml=5.4.1
+  - qt=5.12.9
   - readline=8.0
-  - requests=2.25.0
+  - rtree=0.9.7
   - scipy=1.5.3
   - setuptools=49.6.0
-  - sip=4.19.8
   - six=1.15.0
-  - sqlite=3.33.0
+  - sqlite=3.34.0
   - sqlparse=0.4.1
+  - tiledb=2.2.3
   - tk=8.6.10
   - tornado=6.1
-  - urllib3=1.25.11
+  - typing_extensions=3.7.4.3
+  - tzcode=2021a
   - wcwidth=0.2.5
-  - wheel=0.35.1
-  - xarray=0.16.1
+  - wheel=0.36.2
+  - xarray=0.16.2
+  - xerces-c=3.2.3
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.6.12
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
   - xz=5.2.5
   - yaml=0.2.5
   - zipp=3.4.0
   - zlib=1.2.11
-  - zstd=1.4.5
-  - geopandas
+  - zstd=1.4.8
   - pip:
     - amqp==2.6.1
-    - ascat==1.1.2
     - billiard==3.5.0.5
-    - c3s-sm==0.1.2
     - cached-property==1.5.2
     - cadati==0.0.2
-    - cdsapi==0.3.1
+    - cdsapi==0.5.1
     - celery==4.1.1
-    - cftime==1.3.0
-    - colorcet==2.0.2
+    - cftime==1.0.4.2
+    - chardet==4.0.0
+    - colorcet==2.0.6
     - configparser==5.0.1
+    - coverage==5.4
+    - dask==2021.2.0
     - datedown==0.3
-    - django-countries==6.1.3
+    - django-countries==7.0
     - django-widget-tweaks==1.4.8
     - ease-grid==0.2
-    - ecmwf-api-client==1.6.0
-    - ecmwf-models==0.7
-    - esa-cci-sm==0.1.1
-    - gldas==0.6.1
+    - equi7grid==0.0.10
+    - geopathfinder==0.0.7
     - h5py==3.1.0
+    - idna==2.10
     - ismn==0.4
     - kombu==4.6.11
-    - llvmlite==0.34.0
-    - lxml==4.6.1
-    - netcdf4==1.5.4
-    - numba==0.51.2
-    - param==1.10.0
-    - parse==1.18.0
+    - llvmlite==0.35.0
+    - lxml==4.6.2
+    - netcdf4==1.5.6
+    - numba==0.52.0
+    - param==1.10.1
+    - parse==1.19.0
     - psycopg2-binary==2.8.6
     - pyct==0.4.8
     - pygeobase==0.4.0
-    - pygeogrids==0.3.0
+    - pygeogrids==0.3.2
     - pynetcf==0.2.2
-    - pytesmo==0.9.1
-    - pytest-cov==2.10.1
+    - pytesmo==0.10
+    - pytest-cov==2.11.1
     - pytest-django==4.1.0
     - pytest-mpl==0.12
-    - git+https://github.com/TUW-GEO/qa4sm-reader.git
+    - pytileproj==0.0.12
+    - qa4sm-reader==0.4
     - redis==3.5.3
+    - regex==2020.11.13
     - repurpose==0.8
-    - seaborn==0.11.0
+    - requests==2.25.1
+    - seaborn==0.11.1
     - shapely==1.7.1
-    - smap-io==0.4
-    - smecv-grid==0.3
     - smos==0.2
-    - tqdm==4.52.0
+    - toolz==0.11.1
+    - tqdm==4.56.2
     - trollsift==0.2.1
+    - urllib3==1.26.3
     - vine==1.3.0
-    - Equi7Grid
-    - geopathfinder
-    - git+https://github.com/TUW-GEO/veranda.git
+    #- yeoda==0.2.0
+    #- veranda==0.1.0
