--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -1,4 +1,3 @@
-# need to install yeoda==0.2.0 --no-deps and veranda==0.1.0 --no-deps afterwards
 name: qa4sm
 channels:
   - conda-forge
@@ -33,7 +32,6 @@ dependencies:
   - fontconfig=2.13.1
   - freetype=2.10.4
   - freexl=1.0.5
-  - gdal=3.1.4
   - geopandas=0.8.2
   - geos=3.9.0
   - geotiff=1.6.0
@@ -174,9 +172,8 @@ dependencies:
     - billiard==3.5.0.5
     - cached-property==1.5.2
     - cadati==0.0.2
-    - cdsapi==0.5.1
     - celery==4.1.1
-    - cftime==1.0.4.2
+    - cftime==1.4.1
     - chardet==4.0.0
     - colorcet==2.0.6
     - configparser==5.0.1
@@ -187,6 +184,7 @@ dependencies:
     - django-widget-tweaks==1.4.8
     - ease-grid==0.2
     - equi7grid==0.0.10
+    - gdal==3.0.2
     - geopathfinder==0.0.7
     - h5py==3.1.0
     - idna==2.10
@@ -203,7 +201,7 @@ dependencies:
     - pygeobase==0.4.0
     - pygeogrids==0.3.2
     - pynetcf==0.2.2
-    - pytesmo==0.10
+    - pytesmo==0.10.0
     - pytest-cov==2.11.1
     - pytest-django==4.1.0
     - pytest-mpl==0.12
@@ -221,5 +219,5 @@ dependencies:
     - trollsift==0.2.1
     - urllib3==1.26.3
     - vine==1.3.0
-    #- yeoda==0.2.0
+    #- yeoda==0.2.0 [--no-deps]
     #- veranda==0.1.0
