--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -219,5 +219,5 @@ dependencies:
     - trollsift==0.2.1
     - urllib3==1.26.3
     - vine==1.3.0
-    #- yeoda==0.2.0 [--no-deps]
-    #- veranda==0.1.0
+    #- yeoda==0.2.0 # needs to be installed without depts to keep cftime
+    #- veranda==0.1.0 # needs to be installed without depts to keep cftime
