--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -35,7 +35,7 @@ dependencies:
   - gstreamer=1.14.5
   - hdf4=4.2.13
   - hdf5=1.10.6
-  - icu=67.1
+  - icu=64.2
   - idna=2.10
   - importlib-metadata=2.0.0
   - importlib_metadata=2.0.0
@@ -139,6 +139,7 @@ dependencies:
     - cftime==1.3.0
     - colorcet==2.0.2
     - configparser==5.0.1
+    - coverage==5.3
     - datedown==0.3
     - django-countries==6.1.3
     - django-widget-tweaks==1.4.8
