--- a/UI/.gitignore
+++ b/UI/.gitignore
@@ -44,3 +44,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Since we use scss, css file should be excluded
+src/app/**/*.css
+src/app/**/*.css.map
