--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "testdata"]
 	path = testdata
-	url = git://github.com/awst-austria/qa4sm-testdata.git
+	url = https://github.com/awst-austria/qa4sm-testdata
 	branch = master
