worked on validate page

--- a/UI/package.json
+++ b/UI/package.json
@@ -28,6 +28,9 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.6.0",
     "ngx-logger": "^4.1.9",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
