--- a/UI/angular.json
+++ b/UI/angular.json
@@ -31,7 +31,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
               "src/styles.scss"
+
             ],
             "scripts": []
           },
