--- a/UI/package.json
+++ b/UI/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.6.0",
     "ngx-logger": "^4.1.9",
     "primeflex": "^2.0.0",
