--- a/UI/package.json
+++ b/UI/package.json
@@ -53,7 +53,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "^4.1.5"
+    "tslint": "^6.1.3",
+    "typescript": "^4.2.2"
   }
 }
