--- a/UI/package.json
+++ b/UI/package.json
@@ -27,14 +27,18 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@types/ol": "^6.4.2",
+    "@types/proj4": "^2.5.0",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.6.0",
     "jw-angular-pagination": "^1.2.0",
     "ngx-logger": "^4.1.9",
     "ngx-pagination": "^5.0.0",
+    "ol": "^6.5.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.3",
+    "proj4": "^2.7.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
