--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -149,7 +149,7 @@ dependencies:
     - esa-cci-sm==0.1.1
     - gldas==0.6.1
     - h5py==3.1.0
-    - git+https://github.com/wpreimes/ismn.git
+    - ismn==0.4
     - kombu==4.6.11
     - llvmlite==0.34.0
     - lxml==4.6.1
@@ -166,7 +166,7 @@ dependencies:
     - pytest-cov==2.10.1
     - pytest-django==4.1.0
     - pytest-mpl==0.12
-    - qa4sm-reader==0.4
+    - qa4sm-reader==0.4.2
     - redis==3.5.3
     - repurpose==0.8
     - seaborn==0.11.0
