file-saver added

--- a/UI/package.json
+++ b/UI/package.json
@@ -27,10 +27,14 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@types/file-saver": "^2.0.1",
+    "@types/jquery": "^3.5.5",
     "@types/ol": "^6.4.2",
     "@types/proj4": "^2.5.0",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.6.0",
+    "file-saver": "^2.0.5",
+    "jquery": "^3.6.0",
     "jw-angular-pagination": "^1.2.0",
     "ngx-logger": "^4.1.9",
     "ngx-pagination": "^5.0.0",
@@ -40,6 +44,8 @@
     "primeng": "^11.2.3",
     "proj4": "^2.7.2",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.6",
+    "save": "^2.4.0",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
