--- a/UI/tsconfig.app.json
+++ b/UI/tsconfig.app.json
@@ -7,7 +7,8 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "node_modules/@types/file-saver/index.d.ts"
   ],
   "include": [
     "src/**/*.d.ts"
