--- a/UI/package.json
+++ b/UI/package.json
@@ -34,6 +34,7 @@
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.6.0",
     "file-saver": "^2.0.5",
+    "file-saver-es": "^2.0.5",
     "jquery": "^3.6.0",
     "jw-angular-pagination": "^1.2.0",
     "ngx-logger": "^4.1.9",
