--- a/UI/package.json
+++ b/UI/package.json
@@ -27,12 +27,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@tinkoff/ng-dompurify": "^3.0.0",
     "@types/file-saver": "^2.0.1",
     "@types/jquery": "^3.5.5",
     "@types/ol": "^6.4.2",
     "@types/proj4": "^2.5.0",
+    "angular-gallery": "^1.0.2",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.6.0",
+    "dompurify": "^2.2.7",
     "file-saver": "^2.0.5",
     "file-saver-es": "^2.0.5",
     "jquery": "^3.6.0",
@@ -56,6 +59,7 @@
     "@angular/cli": "~11.1.4",
     "@angular/compiler-cli": "~11.1.2",
     "@angular/localize": "^11.1.2",
+    "@types/dompurify": "^2.2.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
