Fixed link to section in help page

--- a/UI/package.json
+++ b/UI/package.json
@@ -37,6 +37,8 @@
     "jquery": "^3.6.0",
     "jw-angular-pagination": "^1.2.0",
     "ngx-logger": "^4.1.9",
+    "ngx-page-scroll": "^7.0.4",
+    "ngx-page-scroll-core": "^7.0.4",
     "ngx-pagination": "^5.0.0",
     "ol": "^6.5.0",
     "primeflex": "^2.0.0",
