test.yml updated so it doesn't run test_publish_result if there is no token

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Test with no token
         if: ${{ !env.DOI_ACCESS_TOKEN_ENV }}
         run: |
-          pytest -k "not test_result_publishing and test_publish_result"
+          pytest -k "not test_result_publishing and not test_publish_result"
       - name: Long running tests with no token
         if: ${{ !env.DOI_ACCESS_TOKEN_ENV }}
         run: |
