--- a/environment/qa4sm_env.yml
+++ b/environment/qa4sm_env.yml
@@ -169,7 +169,7 @@ dependencies:
     - h5py==3.1.0
     - idna==3.2
     - inflection==0.5.1
-    - git+https://github.com/awst-austria/ismn.git
+    - ismn==1.1.0
     - itypes==1.2.0
     - jinja2==3.0.1
     - kombu==4.6.11
